--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.263.1",
     "next": "13.5.6",
     "react": "^18",
