--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.263.1",
     "next": "13.5.6",
